--- a/index/package.json
+++ b/index/package.json
@@ -5,22 +5,18 @@
     "jade": "jade/config.json"
   },
   "scripts": {
-    "echo": "echo $npm_package_config_key, $npm_package_name",
+    "hint": "echo $npm_package_config_key, $npm_package_name  # comment",
     "jade": "jade -wPO $npm_package_config_jade -o . jade/*.jade",
-    "stylus": "stylus -w -u nib -o css/ stylus/",
+    "stylus": "if [ ! -d stylus ]; then exit; fi; stylus -w -u nib -o css/ stylus/",
     "coffee": "coffee -wo js/ coffee/",
-    "build": "npm run jade & npm run stylus & npm run coffee",
+    "webpack": "webpack -w",
+    "build": "npm run jade & npm run stylus & npm run webpack",
     "watch": "livereloadx > /dev/null",
     "server": "livereloadx -s",
     "start": "npm run build & npm run watch",
-    "install": "npm link coffee-script jade markdown stylus livereloadx"
+    "install": "npm link coffee-script jade markdown stylus livereloadx webpack coffee-loader nib  # need to install globally"
   },
   "devDependencies": {
-    "coffee-script": "^1.10.0",
-    "jade": "^1.11.0",
-    "livereloadx": "^0.3.9",
-    "markdown": "^0.5.0",
-    "nib": "^1.1.0",
-    "stylus": "^0.53.0"
+
   }
 }
