indexのscriptsオプションを冗長化。

--- a/index/package.json
+++ b/index/package.json
@@ -6,11 +6,11 @@
   },
   "scripts": {
     "hint": "echo $npm_package_config_key, $npm_package_name  # comment",
-    "jade": "jade -wPO $npm_package_config_jade -o . jade/*.jade",
-    "stylus": "if [ ! -d stylus ]; then exit; fi; stylus -w -u nib -o css/ stylus/",
-    "coffee": "coffee -wo js/ coffee/",
-    "webpack": "webpack -w",
-    "build": "npm run jade & npm run stylus & npm run coffee # or npm run webpack (*need for config)",
+    "jade": "jade --watch --pretty --obj $npm_package_config_jade --out . jade/*.jade  # -wPO <path> -o <files>",
+    "stylus": "if [ ! -d stylus ]; then exit; fi; stylus --watch --use nib --out css/ stylus/  # -w -u <path> -o <dest/> <src/>",
+    "coffee": "coffee --watch --output js/ coffee/  # -wo <dest/> <src/>  # no use require",
+    "webpack": "webpack -w  # need for config",
+    "build": "npm run jade & npm run stylus & npm run coffee",
     "watch": "livereloadx > /dev/null",
     "server": "livereloadx -s",
     "start": "npm run build & npm run watch",
