--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "network"]
 	path = network
 	url = https://github.com/keiskey/network.git
+[submodule "glsl"]
+	path = glsl
+	url = https://github.com/keiskey/glsl.git
