--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "multiview"]
 	path = multiview
 	url = https://github.com/keiskey/multiview.git
+[submodule "homography"]
+	path = homography
+	url = https://github.com/keiskey/homography.git
