ページの公開方法についてREADMEを更新。 gh-pagesブランチを作成するか、masterブランチにdocsディレクトリを作成する。

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "storage"]
 	path = storage
 	url = https://github.com/keiskey/storage.git
+[submodule "bookmarklet"]
+	path = bookmarklet
+	url = https://github.com/keiskey/bookmarklet.git
