--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "bookmarklet"]
 	path = bookmarklet
 	url = https://github.com/keiskey/bookmarklet.git
+[submodule "chrome"]
+	path = chrome
+	url = https://github.com/keiskey/chrome.git
