--- a/index/package.json
+++ b/index/package.json
@@ -4,20 +4,34 @@
     "key": "value",
     "jade": "jade/config.json"
   },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "scripts": {
-    "hint": "echo $npm_package_config_key, $npm_package_name  # comment",
+    "hint": "echo at first, 'npm run setup'; echo $npm_package_config_key, $npm_package_name  # comment",
     "jade": "jade --watch --pretty --obj $npm_package_config_jade --out . jade/*.jade  # -wPO <path> -o <files>",
-    "stylus": "if [ ! -d stylus ]; then exit; fi; stylus --watch --use nib --out css/ stylus/  # -w -u <path> -o <dest/> <src/>",
-    "coffee": "coffee --watch --output js/ coffee/  # -wo <dest/> <src/>  # no use require",
-    "webpack": "webpack -w  # need for config",
-    "build": "npm run jade & npm run stylus & npm run coffee",
-    "watch": "livereloadx > /dev/null",
-    "server": "livereloadx -s",
-    "start": "npm run build & npm run watch",
-    "preinstall": "mkdir -p coffee jade",
-    "install": "npm link coffee-script jade markdown stylus livereloadx webpack coffee-loader nib  # need to install globally"
+    "stylus": "stylus --watch --use nib --out css/ stylus/  # -w -u <path> -o <dest/> <src/>",
+    "babel": "babel es/ -w -d js/ --presets=es2015",
+    "server_livereloadx": "livereloadx -s  # -p 35729",
+    "server_browser-sync": "browser-sync start --server --files '*.html, *.css, *.js'  # --port 3000",
+    "server_php": "php -S localhost:5000",
+    "setup": "npm link browser-sync gulp gulp-babel gulp-jade gulp-plumber gulp-stylus nib stylus  # babelはローカルに置かないと動作しない",
+    "postsetup": "npm install",
+    "preinstall": "mkdir -p jade stylus css es js",
+    "start": "gulp"
   },
   "devDependencies": {
-
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.18.12",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-jade": "^1.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-stylus": "^2.6.0",
+    "nib": "^1.1.2",
+    "stylus": "^0.54.5"
   }
 }
