--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,9 @@
 [submodule "controller"]
 	path = controller
 	url = https://github.com/keiskey/controller.git
+[submodule "color"]
+	path = color
+	url = https://github.com/keiskey/color.git
+[submodule "timeline"]
+	path = timeline
+	url = https://github.com/keiskey/timeline.git
