--- a/index/package.json
+++ b/index/package.json
@@ -18,9 +18,9 @@
     "server_browser-sync": "browser-sync start --server --files '*.html, *.css, *.js'  # --port 3000",
     "server_php": "php -S localhost:5000",
     "config:jade": "if [ ! -f $npm_package_config_jade ]; then echo {} > $npm_package_config_jade; fi",
+    "presetup": "mkdir -p jade stylus css es js; npm run config:jade",
     "setup": "npm link browser-sync gulp gulp-babel gulp-jade gulp-plumber gulp-stylus nib stylus  # babelはローカルに置かないと動作しない",
     "postsetup": "npm install",
-    "preinstall": "mkdir -p jade stylus css es js",
     "start": "gulp"
   },
   "devDependencies": {
