--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "dmx"]
 	path = dmx
 	url = https://github.com/keiskey/dmx.git
+[submodule "game"]
+	path = game
+	url = https://github.com/keiskey/game.git
